# Notion

./: .gitignore  .prettierignore  BLUEPRINTAUDIT.md  BUGFIXES.md  Cargo.toml  README.md  TODO.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: .eslintrc.cjs  BUILD_ANDROID.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  bridge.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  state.rs  vault.rs
apps/desktop/src/ai/: actions.test.ts  actions.ts
apps/desktop/src/blocks/: schema.test.ts  schema.ts
apps/desktop/src/components/: AIStudio.tsx  AiDialog.tsx  Editor.tsx  Sidebar.tsx  VaultGate.tsx
apps/desktop/src/crdt/: blocks.test.ts  blocks.ts  persistence.test.ts  persistence.ts  textdiff.test.ts  textdiff.ts  usePageDoc.ts
apps/desktop/src/sanitize/: index.test.ts  index.ts
apps/desktop/src/snapshots/: scheduler.test.ts  scheduler.ts
apps/website/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/website/src/: App.tsx  index.css  main.tsx  site.config.ts
apps/website/src/components/: MockWindow.tsx  PhoneMock.tsx  icons.tsx
apps/website/src/data/: android.test.ts  android.ts  features.test.ts  features.ts
apps/website/src/pages/: AndroidPage.tsx
apps/website/src/sections/: Download.tsx  Footer.tsx  Hero.tsx  Nav.tsx  Pillars.tsx  Security.tsx
apps/website/src/sections/android/: DownloadAndroid.tsx  HeroAndroid.tsx  PillarsAndroid.tsx  SecurityAndroid.tsx
companion/: README.md
companion/gnome-extension/notion-island@notion.app/: extension.js  metadata.json  stylesheet.css
companion/gnome-extension/notion-island@notion.app/schemas/: org.gnome.shell.extensions.notion-island.gschema.xml
companion/notion-companion/: Cargo.toml
companion/notion-companion/src/: ai.rs  dbaccess.rs  event.rs  keyring.rs  lib.rs  paths.rs  time.rs
companion/notion-quickview/: Cargo.toml
companion/notion-quickview/src/: data.rs  main.rs
companion/notion-watcher/: Cargo.toml
companion/notion-watcher/data/: com.notion.Calendar.service  com.notion.Calendar.xml  notion-watcher.service
companion/notion-watcher/src/: main.rs
companion/packaging/: install.sh  uninstall.sh
core/: Cargo.toml
core/src/: crdt.rs  db.rs  lib.rs  sanitize.rs
core/src/crypto/: aead.rs  kdf.rs  keys.rs  mod.rs  pairing.rs  recovery.rs
core/src/net/: mod.rs  ssrf.rs
core/tests/: persistence_roundtrip.rs
docs/: ARCHITECTURE.md  OPEN_NOTEBOOK.md
open-notebook/notion-cli/: Cargo.toml
open-notebook/notion-cli/src/: main.rs
open-notebook/notion-mcp/: Cargo.toml
open-notebook/notion-mcp/src/: main.rs
open-notebook/open-notebook-core/: Cargo.toml
open-notebook/open-notebook-core/src/: agents.rs  embedding.rs  gateway.rs  ingestion.rs  jsonutil.rs  lib.rs  mcp.rs  memory.rs  schema.rs  storage.rs  studio.rs
