[package]
name = "notion_core"
version = "0.1.0"
edition = "2021"
description = "Offline-first, encrypted core engine (crypto, CRDT store, SSRF guard, sanitizer) for the Notion-like desktop app."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "notion_core"
crate-type = ["lib"]

[features]
# `sqlcipher` compiles a bundled, statically-linked SQLCipher (vendored OpenSSL).
# It is heavy to build but proves the encrypted-at-rest path (audit §1.1/§1.8).
# Kept on by default; disable with --no-default-features for fast crypto-only test runs.
default = ["sqlcipher"]
sqlcipher = ["dep:rusqlite"]

[dependencies]
# --- Key derivation (audit §2.2, §2.6) ---
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"

# --- AEAD transport / at-rest wrapping (audit §2.3, §2.4) ---
chacha20poly1305 = "0.10"

# --- Asymmetric keys: identity + device key-wrapping (audit §2.1) ---
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }

# --- RNG ---
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# --- Hygiene ---
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"

# --- CRDT opaque store + snapshots (audit §1.3, §1.4) ---
yrs = "0.21"

# --- HTML sanitization for scraped + pasted content (audit §2.8) ---
ammonia = "4"

# --- SSRF URL parsing (audit §2.7) ---
url = "2"

# --- Misc ---
hex = "0.4"
thiserror = "2"

# --- Encrypted local DB (audit §1.1, §1.8) ---
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"], optional = true }

[dev-dependencies]
hex-literal = "0.4"
