# Component C — GTK4/libadwaita quick-view app.
#
# Standalone crate (its own [workspace]) and, like apps/desktop/src-tauri, NOT
# built in headless CI: gtk4-rs + libadwaita need GUI system libraries
# (libgtk-4-dev, libadwaita-1-dev) that CI lacks. All non-GUI logic lives in the
# tested `notion-companion` crate; this crate is thin GTK glue on top.
#
# Build on a machine with the dev libraries:
#   sudo apt-get install libgtk-4-dev libadwaita-1-dev libdbus-1-dev
#   cargo build --release
[workspace]

[package]
name = "notion-quickview"
version = "0.1.0"
edition = "2021"
description = "Lightweight GTK4/libadwaita calendar quick-view with local-AI add for the Notion companion."
publish = false

[[bin]]
name = "notion-quickview"
path = "src/main.rs"

[dependencies]
notion-companion = { path = "../notion-companion", features = ["keyring", "ollama-http"] }
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
glib = "0.20"
gio = "0.20"
uuid = { version = "1", features = ["v4"] }
# `data.rs` implements notion-companion's KeyProvider, whose method returns a
# `zeroize::Zeroizing<String>`, so the type must be linked here directly.
zeroize = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
