# NOTE: This crate is intentionally OUTSIDE the root Cargo workspace and is NOT
# built in CI. The `tauri` crate requires GUI system libraries (WebKitGTK on
# Linux) to compile, which are not present in the headless CI image. All logic
# lives in `notion_core` (which IS tested in CI); this is a thin command layer.
[workspace]

[package]
name = "notion-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri shell (desktop + Android/iOS) for the offline-first Notion-like app."
publish = false

# The library carries the shared app (see src/lib.rs). Mobile (Android/iOS)
# targets link this crate as a shared/static library and call the
# `mobile_entry_point`, so it must expose `cdylib` + `staticlib`; `rlib` lets the
# desktop `main.rs` binary link it too. This is the canonical Tauri 2 layout.
[lib]
name = "notion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notion_core = { path = "../../../core" }
# Keyring only (no sqlcipher): on unlock we publish the derived SQLCipher key to
# the OS keyring so the GNOME companion daemon/app can open the same DB. Sharing
# this crate keeps the keyring service/account names in one place.
notion-companion = { path = "../../../companion/notion-companion", default-features = false, features = ["keyring"] }
# The merged "Open Notebook" engine. `sqlcipher` lets it open a second connection
# to the shared notion.db (WAL, so concurrent with the editor's writer);
# `ollama-http` wires the local Ollama gateway for summarize / agent planning.
open-notebook-core = { path = "../../../open-notebook/open-notebook-core", features = [
    "sqlcipher",
    "ollama-http",
] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
getrandom = "0.2"
thiserror = "2"
zeroize = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
